--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.20",
+        "autoprefixer": "^10.4.2",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
+        "sass-embedded": "^1.81.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.3"
     }
 }
